# rubiks-solver

./: .dockerignore  .gitignore  INTERVIEW_PREP.md  README.md  render.yaml
backend/: Dockerfile  main.py  requirements.txt  validator.py  vision.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  cubeTypes.ts  index.css
frontend/src/components/: ColorGrid.tsx  CubePreview.tsx  FaceCapture.tsx  SolveSteps.tsx
solver/: CMakeLists.txt  Combinatorics.h  Coord.cpp  Coord.h  Cube.cpp  Cube.h  Move.cpp  Move.h  PatternDB.cpp  PatternDB.h  PdbDir.h  Solver.cpp  Solver.h  benchmark.cpp  interview.md  main.cpp  pdb_gen.cpp  test_combinatorics.cpp  test_coord.cpp  test_pdb.cpp
